<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="prog_title">Tip Calculator</string>
    <string name="bill_amount_string">Bill Amount </string>
    <string name="round_text">Round to nearest dollar</string>
    <string name="tip_request">How much tip would you like to pay?</string>
    <string name="tip_default">12</string>
    <string name="percent">%</string>
    <string name="calculate">Calculate</string>
    <string name="tip_result">Tip:</string>
    <string name="total_result">Total cost:</string>

</resources>
